# BetterRTX-Installer

./: .eslintrc.json  .gitignore  .pylintrc  BetterRTX-Installer.code-workspace  BetterRTX_Installer.ps1  CHANGELOGS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE.md  PrepareReleases.ps1  README.md  SECURITY.md  config.json  go.mod  go.sum  installer.ps1  main.go  main.py  notes.md  package-lock.json  package.json  pyproject.toml  simpleprintscript.ps1  tailwind.config.ts  todo.md  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  v2_locale.md
.github/workflows/: devskim.yml  issues.yml  powershell.yml
Localized/de/: BetterRTX_Installer.psd1
Localized/en-US/: BetterRTX_Installer.psd1  installer.psd1
Localized/es/: BetterRTX_Installer.psd1
Localized/fi/: BetterRTX_Installer.psd1
Localized/fr/: BetterRTX_Installer.psd1
Localized/gsw/: BetterRTX_Installer.psd1
Localized/hi/: BetterRTX_Installer.psd1
Localized/id/: BetterRTX_Installer.psd1
Localized/it/: BetterRTX_Installer.psd1
Localized/jv/: BetterRTX_Installer.psd1
Localized/ko/: BetterRTX_Installer.psd1
Localized/nl/: BetterRTX_Installer.psd1
Localized/pt-br/: BetterRTX_Installer.psd1
Localized/ro/: BetterRTX_Installer.psd1
Localized/ru/: BetterRTX_Installer.psd1
Localized/sm/: BetterRTX_Installer.psd1
Localized/th/: BetterRTX_Installer.psd1
Localized/tr/: BetterRTX_Installer.psd1
Localized/vi/: BetterRTX_Installer.psd1
Localized/zh/: BetterRTX_Installer.psd1
Localized/zh-Hans/: BetterRTX_Installer.psd1
en-US/: BetterRTX_Installer.psd1
fr-fr/: BetterRTX_Installer.psd1
iobit/: IObitUnlockerNotFoundError.go  iobit.go
it-it/: BetterRTX_Installer.psd1
ko/: BetterRTX_Installer.psd1
resources/script/: minecraft_locations.ps1  minecraft_package.ps1  minecraft_process_id.ps1  minecraft_running_instance.ps1
ru/: BetterRTX_Installer.psd1
scripts/: download.ps1  gui.ps1  guiElements.ps1  lib.ps1
src/: DLSSgui.py  MainGUI.py  api.py  files.py  main.py  mainGUI.py  minecraftInstallations.py  register_rtpack_file_assoc.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/mod/: page.tsx
src/app/setup/: page.tsx
src/components/: FileName.tsx  InstanceMenu.tsx  button.tsx  link.tsx  loading.tsx  logo.tsx  navigation.tsx
src/components/mod/: PackEntry.tsx  PackEntryButtons.tsx  PackEntryError.tsx  PackList.tsx  PackUpload.tsx
src/components/setup/: BetterRenderDragonForm.tsx  SideloadAction.tsx  SideloadConsole.tsx  SideloadLocation.tsx  SideloaderForm.tsx  UnlockerForm.tsx
src/context/: PackContext.ts  index.ts
src/fileManagement/: filemgmt.py  iobit_unlocker.py  regular_file_management.py
src/hooks/: index.ts  useMcPack.ts  useMinecraftProcess.ts  useSideload.ts  useUnlock.ts
src/lib/: constants.ts  i18n.ts  index.ts
src/store/: index.ts  instanceStore.ts  modStore.ts  packStore.ts  setupStore.ts
src/types/: index.ts
v1/: BetterRTX_Installer (Test without IOBit).ps1  BetterRTX_Installer.ps1  BetterRTX_Installer.sh  PrepareReleases.ps1  config.json  hashinstaller.ps1
v1/Localized/af/: BetterRTX_Installer.psd1
v1/Localized/de/: BetterRTX_Installer.psd1
v1/Localized/en-US/: BetterRTX_Installer.psd1
v1/Localized/es/: BetterRTX_Installer.psd1
v2/: installer.ps1
v2/en-US/: installer.psd1
vi/: BetterRTX_Installer.psd1
(+33 files in other folders)
