[project]
name = "betterrtx-installer"
version = "3.0.0"
description = ""
readme="README.md"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "GPL-3"}
requires-python = "3.12.*"
dependencies =[
    "flet==0.28.3",
    "requests (>=2.32.3,<3.0.0)",
    "flet-dropzone (>=0.2.0,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[project.scripts]
betterrtx-installer = "src.main:main"

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
pyinstaller = "^6.13.0"


[tool.flet]
org = "graphics.bedrock"
product = "BetterRTX Installer"
company = "BetteRTX Org"
icon = "assets/icon.png"
app.path = "src"

[tool.flet.compile]
# app = true # --compile-app
# packages = true # --compile-packages
# cleanup = true

[tool.flet.splash]
color = "#121212" # --splash-color
dark_color = "#121212" # --splash-dark-color
web = false # --no-web-splash
ios = false # --no-ios-splash
android = false # --no-android-splash

[tool.flet.app.boot_screen]
show = true
message = "Preparing the app for its first launch…"

[tool.flet.app.startup_screen]
show = true
message = "Starting up the app…"